--- a/ReadME
+++ b/ReadME
@@ -25,7 +25,7 @@ GIT : a VCS , provided to access on platforms GITHUB / BITBUCKET / GITLAB
 
 TERMINAL : COMMON COMMANDS FOR DIRECTORY MANAGEMENT IN WEB DEVELOPMENT / GIT BASH / Terminal
 
-project : Emobilis Web Development Page : info on the program , course outline , about
+project : Personal portfolio Web Development Page : info on the program , course outline , about
 
 decision on the project structure
 RootDirectory -> index.html , CSS/ PUBLIC/ ASSETS/ JS/
@@ -37,7 +37,7 @@ change directory : cd 'directory name' : navigate in cd .. : navigate out
 
 clear : to clear out commands on terminal
 
-mkdir : make directory :: mkdir 'emobilis web' mkdir emobilisWeb
+mkdir : make directory :: mkdir 'Personal web' mkdir personal portfolioWeb
 
 touch : create a file : touch filename
 
@@ -59,7 +59,7 @@ git config user.email 'x@example.com' {here use the email you registered to gith
 git config user.name 'Elixzokyai' {github account username}
 when the project is new
 git init
-git remote add origin https://github.com/josephbill/emobilisWebPage.git {get your url origin from github}
+git remote add origin https://github.com/Elixzokyai/Personal-portfolio-landing-project-page.git {get your url origin from github}
 git remote -v {to check if above origin was added}
 git status : {red : rep. files that are not yet added to be committed} {green rep. files that are ready to be committed}
 git add . git add filename/foldername
